# MathLibraryDemo4

./: .gitignore
CMakeProject/: CMakeLists.txt
CMakeProject/include/: Calculator.h  MathLibrary.h
CMakeProject/src/: Calculator.cpp  MathLibrary.cpp
CMakeProject/tests/: CalculatorTests.cpp  MathFunctionsTests.cpp
